--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,7 @@
                         </li>
                         <li class="list">
                             <a href="./portfolio.html" class="header-link link current">Портфоліо</a>
+                            <div class="portfolio-navig-box"></div>
                         </li>
                         <li class="list">
                             <a href="" class="header-link link">Контакти</a>
@@ -83,8 +84,16 @@
                 <div class="section-galleri">
                     <ul class="main-galleri">
                         <li class="list container-main-img">
-                            <a class="link" href="">
-                                <img class="portfolio-img" src="./images/image3.1.jpg" alt="Веб-сайт" width="370" />
+                            <a class="container-link-img link" href="">
+                                <div class="galleri-top-wrap">
+                                    <img class="portfolio-img" src="./images/image3.1.jpg" alt="Веб-сайт" width="370" />
+                                    <p class="galleri-top-text">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем
+                                        функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну
+                                        особу.
+                                    </p>
+                                </div>
                                 <div class="galleri-title-text">
                                     <h1 class="section-title-img">Технокряк</h1>
                                     <p class="section-text-foto">Веб-сайт</p>
@@ -92,8 +101,16 @@
                             </a>
                         </li>
                         <li class="list container-main-img">
-                            <a class="link" href="">
-                                <img class="portfolio-img" src="./images/image3.2.jpg" alt="Дизайн" width="370" />
+                            <a class="container-link-img link" href="">
+                                <div class="galleri-top-wrap">
+                                    <img class="portfolio-img" src="./images/image3.2.jpg" alt="Веб-сайт" width="370" />
+                                    <p class="galleri-top-text">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем
+                                        функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну
+                                        особу.
+                                    </p>
+                                </div>
                                 <div class="galleri-title-text">
                                     <h1 class="section-title-img">
                                         Постер New Orlean vs Golden Star
@@ -103,8 +120,16 @@
                             </a>
                         </li>
                         <li class="list container-main-img">
-                            <a class="link" href="">
-                                <img class="portfolio-img" src="./images/image3.3.jpg" alt="Додаток" width="370" />
+                            <a class="container-link-img link" href="">
+                                <div class="galleri-top-wrap">
+                                    <img class="portfolio-img" src="./images/image3.3.jpg" alt="Веб-сайт" width="370" />
+                                    <p class="galleri-top-text">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем
+                                        функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну
+                                        особу.
+                                    </p>
+                                </div>
                                 <div class="galleri-title-text">
                                     <h1 class="section-title-img">Ресторан Seafood</h1>
                                     <p class="section-text-foto">Додаток</p>
@@ -112,8 +137,16 @@
                             </a>
                         </li>
                         <li class="list container-main-img">
-                            <a class="link" href="">
-                                <img class="portfolio-img" src="./images/image3.4.jpg" alt="Маркетинг" width="370" />
+                            <a class="container-link-img link" href="">
+                                <div class="galleri-top-wrap">
+                                    <img class="portfolio-img" src="./images/image3.4.jpg" alt="Веб-сайт" width="370" />
+                                    <p class="galleri-top-text">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем
+                                        функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну
+                                        особу.
+                                    </p>
+                                </div>
                                 <div class="galleri-title-text">
                                     <h1 class="section-title-img">Проєкт Prime</h1>
                                     <p class="section-text-foto">Маркетинг</p>
@@ -121,17 +154,33 @@
                             </a>
                         </li>
                         <li class="list container-main-img">
-                            <a class="link" href="">
-                                <img class="portfolio-img" src="./images/image3.5.jpg" alt="Додаток" width="370" />
+                            <a class="container-link-img link" href="">
+                                <div class="galleri-top-wrap">
+                                    <img class="portfolio-img" src="./images/image3.5.jpg" alt="Веб-сайт" width="370" />
+                                    <p class="galleri-top-text">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем
+                                        функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну
+                                        особу.
+                                    </p>
+                                </div>
                                 <div class="galleri-title-text">
                                     <h1 class="section-title-img">Проєкт Boxes</h1>
                                     <p class="section-text-foto">Додаток</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="list container-main-img">
+                        <li class="container-link-img list container-main-img">
                             <a class="link" href="">
-                                <img class="portfolio-img" src="./images/image3.6.jpg" alt="Веб-сайт" width="370" />
+                                <div class="galleri-top-wrap">
+                                    <img class="portfolio-img" src="./images/image3.6.jpg" alt="Веб-сайт" width="370" />
+                                    <p class="galleri-top-text">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем
+                                        функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну
+                                        особу.
+                                    </p>
+                                </div>
                                 <div class="galleri-title-text">
                                     <h1 class="section-title-img">
                                         Inspiration has no Borders
@@ -141,8 +190,16 @@
                             </a>
                         </li>
                         <li class="list container-main-img">
-                            <a class="link" href="">
-                                <img class="portfolio-img" src="./images/image3.7.jpg" alt="Дизайн" width="370" />
+                            <a class="container-link-img link" href="">
+                                <div class="galleri-top-wrap">
+                                    <img class="portfolio-img" src="./images/image3.7.jpg" alt="Веб-сайт" width="370" />
+                                    <p class="galleri-top-text">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем
+                                        функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну
+                                        особу.
+                                    </p>
+                                </div>
                                 <div class="galleri-title-text">
                                     <h1 class="section-title-img">Видання Limited Edition</h1>
                                     <p class="section-text-foto">Дизайн</p>
@@ -150,8 +207,16 @@
                             </a>
                         </li>
                         <li class="list container-main-img">
-                            <a class="link" href="">
-                                <img class="portfolio-img" src="./images/image3.8.jpg" alt="Маркетинг" width="370" />
+                            <a class="container-link-img link" href="">
+                                <div class="galleri-top-wrap">
+                                    <img class="portfolio-img" src="./images/image3.8.jpg" alt="Веб-сайт" width="370" />
+                                    <p class="galleri-top-text">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем
+                                        функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну
+                                        особу.
+                                    </p>
+                                </div>
                                 <div class="galleri-title-text">
                                     <h1 class="section-title-img">Проєкт LAB</h1>
                                     <p class="section-text-foto">Маркетинг</p>
@@ -159,8 +224,16 @@
                             </a>
                         </li>
                         <li class="list container-main-img">
-                            <a class="link" href="">
-                                <img class="portfolio-img" src="./images/image3.9.jpg" alt="Додаток" width="370" />
+                            <a class="container-link-img link" href="">
+                                <div class="galleri-top-wrap">
+                                    <img class="portfolio-img" src="./images/image3.9.jpg" alt="Веб-сайт" width="370" />
+                                    <p class="galleri-top-text">
+                                        Ресурс пропонує комплексні пропозиції з різним рівнем
+                                        функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну
+                                        особу.
+                                    </p>
+                                </div>
                                 <div class="galleri-title-text">
                                     <h1 class="section-title-img">Growing Business</h1>
                                     <p class="section-text-foto">Додаток</p>
