--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <ul class="header-navig">
                         <li class="list">
                             <a href="./index.html" class="header-link link current">Студія</a>
+                            <div class="navig-box"></div>
                         </li>
                         <li class="list">
                             <a href=" ./portfolio.html" class="header-link link">Портфоліо</a>
@@ -61,7 +62,9 @@
             <div>
                 <h1 class="hero-title">ЕФЕКТИВНЕ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
             </div>
-            <button type="button" class="hero-batton">Замовити послугу</button>
+            <button type="button" class="hero-batton" data-modal-open>
+                Замовити послугу
+            </button>
         </section>
     </div>
     <main>
@@ -125,13 +128,22 @@
             <h2 class="section-title-foto">Чим ми займаємося</h2>
             <ul class="list foto">
                 <li class="galleri-img">
-                    <img src="./images/image1.1.jpg" alt="Розробка ПЗ" width="370" />
+                    <img class="foto-img" src="./images/image1.1.jpg" alt="Розробка ПЗ" width="370" />
+                    <div class="section-description-img">
+                        <p class="description-img">Десктопні додатки</p>
+                    </div>
                 </li>
                 <li class="galleri-img">
-                    <img src="./images/image1.2.jpg" alt="Обробка данних" width="370" />
+                    <img class="foto-img" src="./images/image1.2.jpg" alt="Обробка данних" width="370" />
+                    <div class="section-description-img">
+                        <p class="description-img">Мобільні додатки</p>
+                    </div>
                 </li>
                 <li class="galleri-img">
-                    <img src="./images/image1.3.jpg" alt="Дизайн" width="370" />
+                    <img class="foto-img" src="./images/image1.3.jpg" alt="Дизайн" width="370" />
+                    <div class="section-description-img">
+                        <p class="description-img">Дизайнерські рішення</p>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -400,6 +412,16 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-btn" data-modal-close>
+                <svg class="footer-soc-icon" width="18" height="18">
+                    <use href="./images/symbol-defs.svg#icon-close-black-18dp"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./JS/modal.js"></script>
 </body>
 
 </html>
